k8s/product-service.yaml
# week08/k8s/product-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-w08e1
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service-container
          image: pjsit722week08acr.azurecr.io/product_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-w08e1
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
